# valence-zk-demo

./: .env.example  .gitignore  .gitmodules  Cargo.toml  README.md
beacon/: Cargo.toml
beacon/src/: helpers.rs  lib.rs
beacon/src/types/: electra.rs  mod.rs
coprocessor/: Cargo.toml  build.rs
coprocessor-proofs/coprocessor-circuit-logic/: Cargo.toml
coprocessor-proofs/coprocessor-circuit-logic/src/: lib.rs
coprocessor-proofs/coprocessor-circuit-sp1/: Cargo.toml
coprocessor-proofs/coprocessor-circuit-sp1/src/: main.rs
coprocessor-proofs/coprocessor-circuit-types/: Cargo.toml
coprocessor-proofs/coprocessor-circuit-types/src/: lib.rs
coprocessor/src/: clients.rs  constants.rs  coprocessor.rs  lightclients.rs  mailbox.rs  main.rs  rate.rs
coprocessor/src/demo/: helios.rs  mod.rs  tendermint.rs
coprocessor/src/examples/: mailbox.rs  mod.rs  rate.rs
coprocessor/src/lightclients/: helios.rs  mod.rs  tendermint.rs
elfs/: sp1-helios-elf  tendermint-elf  tendermint-light-client
ethereum-consensus/: Cargo.toml
ethereum-consensus/src/: lib.rs  serde.rs
ethereum-consensus/src/bellatrix/: beacon_block.rs
ethereum-consensus/src/electra/: beacon_block.rs  mod.rs
merkle-proofs/merkle-circuit-logic/: Cargo.toml
merkle-proofs/merkle-circuit-sp1/: Cargo.toml
merkle-proofs/merkle-circuit-types/: Cargo.toml
smt-proofs/smt-circuit-logic/: Cargo.toml
smt-proofs/smt-circuit-sp1/: Cargo.toml
smt-proofs/smt-circuit-types/: Cargo.toml
ssz-merkleize/: Cargo.toml
ssz-merkleize/src/: lib.rs  merkleize.rs  types.rs
zk-programs/zk-mailbox-example/: README.md
zk-programs/zk-mailbox-example/zk-mailbox-application/: Cargo.toml
zk-programs/zk-mailbox-example/zk-mailbox-application-contracts/: README.md
zk-programs/zk-mailbox-example/zk-mailbox-application-contracts/ethereum-mailbox-contract/: deploy.sh  verify.sh
zk-programs/zk-mailbox-example/zk-mailbox-application-contracts/ethereum-mailbox-contract/script/: Mailbox.s.sol
zk-programs/zk-mailbox-example/zk-mailbox-application-contracts/ethereum-mailbox-contract/src/: Mailbox.sol
zk-programs/zk-mailbox-example/zk-mailbox-application-contracts/ethereum-mailbox-contract/test/: Mailbox.t.sol
zk-programs/zk-mailbox-example/zk-mailbox-application-contracts/neutron-mailbox-contract/: Cargo.toml
zk-programs/zk-mailbox-example/zk-mailbox-application-contracts/neutron-mailbox-contract/artifacts/: checksums.txt  neutron_mailbox_contract.wasm
zk-programs/zk-mailbox-example/zk-mailbox-application-contracts/neutron-mailbox-contract/src/: contract.rs  msg.rs  state.rs
zk-programs/zk-mailbox-example/zk-mailbox-application-types/: Cargo.toml
zk-programs/zk-mailbox-example/zk-mailbox-application-types/src/: lib.rs
zk-programs/zk-mailbox-example/zk-mailbox-application/src/: main.rs
zk-programs/zk-rate-application-types/: Cargo.toml
zk-programs/zk-rate-application-types/src/: lib.rs
zk-programs/zk-rate-application/src/: main.rs
zk-programs/zk-rate-example/: README.md
zk-programs/zk-rate-example/zk-rate-application/: Cargo.toml
zk-programs/zk-rate-example/zk-rate-application-contracts/ethereum-vault-contract/: deploy.sh
zk-programs/zk-rate-example/zk-rate-application-contracts/ethereum-vault-contract/broadcast/Vault.s.sol/11155111/: run-1744727678.json  run-1744729886.json
zk-programs/zk-rate-example/zk-rate-application-contracts/ethereum-vault-contract/script/: Vault.s.sol
zk-programs/zk-rate-example/zk-rate-application-contracts/neutron-vault-contract/artifacts/: checksums.txt  neutron_vault_contract.wasm
zk-programs/zk-rate-example/zk-rate-application-types/: Cargo.toml
zk-programs/zk-rate-example/zk-rate-application-types/src/: lib.rs
zk-programs/zk-rate-example/zk-rate-application/src/: main.rs
zk-programs/zk-rate/zk-rate-guest/: Cargo.toml
zk-programs/zk-rate/zk-rate-program/: Cargo.toml
