[workspace]
members = [
    "coprocessor-proofs/coprocessor-circuit-types",
    "coprocessor-proofs/coprocessor-circuit-sp1",
    "coprocessor-proofs/coprocessor-circuit-logic",
    "coprocessor",
    "zk-programs/zk-rate-example/zk-rate-application",
    "zk-programs/zk-rate-example/zk-rate-application-types",
    "zk-programs/zk-mailbox-example/zk-mailbox-application",
    "zk-programs/zk-mailbox-example/zk-mailbox-application-types",
]

[profile.dev]
opt-level = 3

exclude = [
    "zk-programs/zk-mailbox-example/zk-mailbox-application-contracts/neutron-mailbox-contract",
    "zk-programs/zk-rate-example/zk-rate-application-contracts/neutron-vault-contract",
]

[workspace.dependencies]
tendermintx = { path = "../tendermintx" }
zk-mailbox-application = { path = "zk-programs/zk-mailbox-example/zk-mailbox-application" }
zk-mailbox-application-types = { path = "zk-programs/zk-mailbox-example/zk-mailbox-application-types" }
zk-rate-application = { path = "zk-programs/zk-rate-example/zk-rate-application" }
zk-rate-application-types = { path = "zk-programs/zk-rate-example/zk-rate-application-types" }
coprocessor-circuit-sp1 = { path = "coprocessor-proofs/coprocessor-circuit-sp1" }
coprocessor-circuit-types = { path = "coprocessor-proofs/coprocessor-circuit-types" }
valence-coprocessor-core = { package = "valence-coprocessor", git = "https://github.com/jonas089/valence-coprocessor", branch = "feat/sha2-and-derive-macros" }
alloy-primitives = { version = "0.8.25", features = ["rlp"] }

common-merkle-proofs = { package = "common", git = "https://github.com/timewave-computer/zk-merkle-proofs", branch = "demo", default-features = false }
ethereum-merkle-proofs = { package = "ethereum", git = "https://github.com/timewave-computer/zk-merkle-proofs", branch = "demo", features = [
    "borsh",
], default-features = false }
ics23-merkle-proofs = { package = "ics23-cosmos", git = "https://github.com/timewave-computer/zk-merkle-proofs", branch = "demo", features = [
    "borsh",
], default-features = false }

borsh = { version = "1.5.5", features = ["derive"] }
sp1-zkvm = { git = "https://github.com/timewave-computer/sp1", branch = "jonas/fix-4.1.7-syscall" }
sp1-sdk = { git = "https://github.com/timewave-computer/sp1", branch = "jonas/fix-4.1.7-syscall", features = [
    "native-gnark",
] }
# not a custom branch, just a small deps fix for the release tag 4.1.7
sp1-verifier = { git = "https://github.com/timewave-computer/sp1", branch = "jonas/fix-4.1.7-syscall" }
serde_json = "1"

anyhow = "1"

[patch.crates-io]
sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "patch-sha2-0.10.8-sp1-4.0.0" }
