[package]
name = "ethereum-consensus"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.81"
ssz_rs = { git = "https://github.com/ralexstokes/ssz-rs", rev = "84ef2b71aa004f6767420badb42c902ad56b8b72" }

[dev-dependencies]
alloy-eips = { version = "0.13.0", default-features = false }
reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.4", default-features = false }
