[package]
name = "ssz-merkleize"
version = "0.1.0"
edition = "2024"

[dependencies]
hex = "0.4"
tokio = { version = "1.40.0", features = ["full"], optional = true }
ethereum-consensus = { path = "../ethereum-consensus" }
reqwest = { workspace = true, optional = true, features = ["json"] }
itertools.workspace = true
sha2.workspace = true
serde.workspace = true
serde_json.workspace = true
lazy_static = "1.5.0"

[features]
reqwest = ["dep:reqwest", "dep:tokio"]
