[package]
name = "coprocessor-circuit-sp1"
version = "0.1.0"
edition = "2024"

[dependencies]
sp1-zkvm.workspace = true
types = { package = "coprocessor-circuit-types", path = "../coprocessor-circuit-types" }
borsh.workspace = true
coprocessor-circuit-logic = { path = "../coprocessor-circuit-logic" }

[profile.dev]
opt-level = 3
